Tue Feb 14 22:43:07 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * docs/design/INSTANCE_HANDLES:
        * docs/design/RTPS:

          Updated design docs to reflect the latest RTPS changes.

Tue Feb 14 17:14:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Allow command-line, config-file, and API-based setting of the
          default discovery object (used when a given domain ID has no
          discovery configured).

        * tests/DCPS/ConfigFile/ConfigFile.cpp:
        * tests/DCPS/ConfigFile/test1.ini:
        * tests/DCPS/ConfigFile/test1_nobits.ini:
        * tests/DCPS/RtpsDiscovery/rtps_disc.ini:

          Test the above.

        * dds/DCPS/FileSystemStorage.cpp:
        * dds/idl/be_global.cpp:

          Porting for GCC on Windows (MinGW).  This is experimental.
          DCPSInfoRepo persistence seems not to work on MinGW.
          Fixed some other minor issues while reviewing FileSystemStorage.cpp.

        * dds/DCPS/transport/framework/TransportReceiveStrategy_T.cpp:

          Check transport debug level before formatting hexdump.

Mon Feb 13 22:35:25 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpTransport.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpTransport.cpp:

          Revised strategy for keeping track of the default receive listener.

Mon Feb 13 21:42:30 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:

          Initializing all Qos.

Mon Feb 13 20:29:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        Changes for handling IPv6 in the rtps_udp transport.
        This requires an ACE_HAS_IPV6 build of ACE.

        * dds/DCPS/RTPS/BaseMessageUtils.h:

          When calling ACE_INET_Addrr::set_address() for IPv6,
          the 'encode' argument must be zero.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h: